finalized for demo

--- a/templates/filter.html
+++ b/templates/filter.html
@@ -6,13 +6,231 @@
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.17.0/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.17.0/mapbox-gl.css' rel='stylesheet' />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css"> 
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/bootstrap-switch.css" rel="stylesheet"> 
+    <link rel="stylesheet" href="/static/css/main.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <script src="/static/js/jcf.js"></script>
+    <script src="/static/js/jcf.select.js"></script>      
+    <script src="/static/js/bootstrap-switch.js"></script>
     <style>
         body { margin:0; padding:0; }
         #map { position:absolute; top:0; bottom:0; width:100%; }
     </style>
 </head>
 <body>
+<style>
+body {
+    margin:0;
+    padding:0;
+    background:#fff;
+    font-family:'Montserrat',sans-serif;
+    font-size:12px;
+}
+ul {
+    margin:0;
+    padding:0;
+    text-decoration:none;
+    list-style:none;
+}
+li {
+    padding:0;
+    margin:0;
+}
+nav {
+    text-align:center;
+    width:100%;
+    position:relative;
+    height:auto;
+    overflow:hidden;
+    background:none;
+}
+nav ul {
+    text-align:center;
+}
+nav ul li {
+    display:inline-block;
+}
+nav ul li a {
+    color:#333;
+    display:inline-block;
+    padding:1em 3em;
+    text-decoration:none;
+    border-bottom:2px solid #fff;
+    transition-property:all .2s linear 0s;
+    -moz-transition:all .2s linear 0s;
+    -webkit-transition:all .2s linear 0s;
+    -o-transition:all .2s linear 0s;
+    font-size:16px;
+}
+nav ul li a:hover {
+    color: #34B484;
+}
+/*styling open close button*/
+.button {
+    display:inline;
+    position:absolute;
+    right:50px;
+    top:6px;
+    z-index:999;
+    font-size:30px;
+}
+.button a {
+    text-decoration:none;
 
+}
+.btn-open:after {
+    color:#fff;
+    content:"\f0c9";
+    font-family:"FontAwesome";
+    transition-property:all .2s linear 0s;
+    -moz-transition:all .2s linear 0s;
+    -webkit-transition:all .2s linear 0s;
+    -o-transition:all .2s linear 0s;
+}
+.btn-open:hover:after {
+    color:#34B484;
+}
+.btn-close:after {
+    color:#fff;
+    content:"\f00d";
+    font-family:"FontAwesome";
+    transition-property:all .2s linear 0s;
+    -moz-transition:all .2s linear 0s;
+    -webkit-transition:all .2s linear 0s;
+    -o-transition:all .2s linear 0s;
+}
+.btn-close:hover:after {
+    color: #34B484;
+}
+/*overlay*/
+.overlay {
+    display:none;
+    position:fixed;
+    top:0;
+    height:100%;
+    width:100%;
+    background:rgba(1,1,1,.7);
+    overflow:auto;
+    z-index:99;
+}
+.wrap {
+    color:#e9e9e9;
+    text-align:center;
+    max-width:90%;
+    margin:0 auto;
+}
+.wrap ul.wrap-nav {
+    border-bottom:1px solid #575757;
+    text-transform:capitalize;
+    padding:150px 0px 100px;
+}
+.wrap ul.wrap-nav li {
+    font-size:20px;
+    display:inline-block;
+    vertical-align:top;
+    width:24%;
+    position:relative;
+}
+.wrap ul.wrap-nav li a {
+    color:#34B484;
+    display:block;
+    padding:8px 0;
+    text-decoration:none;
+    transition-property:all .2s linear 0s;
+    -moz-transition:all .2s linear 0s;
+    -webkit-transition:all .2s linear 0s;
+    -o-transition:all .2s linear 0s;
+}
+.wrap ul.wrap-nav li a:hover {
+    color:#f0f0f0;
+}
+.wrap ul.wrap-nav ul {
+    padding:20px 0;
+}
+.wrap ul.wrap-nav ul li {
+    display:block;
+    font-size:13px;
+    width:100%;
+    color:#e9e9e9;
+}
+.wrap ul.wrap-nav ul li a {
+    color:#f0f0f0;
+}
+.wrap ul.wrap-nav ul li a:hover {
+    color:#34B484;
+}
+.social {
+    font-size:25px;
+    padding:20px;
+}
+.social p {
+    margin:0;
+    padding:20px 0 5px 0;
+    line-height:30px;
+    font-size:13px;
+}
+.social p a {
+    color:#34B484;
+    text-decoration:none;
+    margin:0;
+    padding:0;
+}
+.social-icon {
+    width:80px;
+    height:50px;
+    background:#e9e9e9;
+    color:#333;
+    display:inline-block;
+    margin:0 20px;
+    transition-property:all .2s linear 0s;
+    -moz-transition:all .2s linear 0s;
+    -webkit-transition:all .2s linear 0s;
+    -o-transition:all .2s linear 0s;
+}
+.social-icon:hover {
+    background:#34B484;
+    color:#f0f0f0;
+}
+.social-icon i {
+    margin-top:12px;
+}
+@media screen and (max-width:48em) {
+    .wrap ul.wrap-nav>li {
+        width:100%;
+        padding:20px 0;
+        border-bottom:1px solid #575757;
+    }
+    .wrap ul.wrap-nav {
+        padding:30px 0px 0px;
+    }
+    nav ul {
+        opacity:0;
+        visibility:hidden;
+    }
+    .social {
+        color:#c1c1c1;
+        font-size:25px;
+        padding:15px 0;
+    }
+    .social-icon {
+        width:100%;
+        height:50px;
+        background:#fff;
+        color:#333;
+        display:block;
+        margin:5px 0;
+    }
+}
+.content {
+    width:100%;
+    margin-top:200px;
+    font-size:20px;
+    color#333;
+    text-align: center;
+}
+</style>
 <style>
 .map-overlay {
     position: absolute;
@@ -74,6 +292,47 @@
     background: #f0f0f0;
 }
 </style>
+<nav>
+<ul>
+    <li><a > </a></li>
+</ul>
+<div class="button">
+    <a class="btn-open" href="#"></a>
+</div>
+</nav>
+<div class="overlay">
+    <div class="wrap">
+        <ul class="wrap-nav">
+            <li><a href="#">Features</a>
+            <ul>
+                <li><a href="/filter"><h3>Medical Locations</h3></a></li>
+                <input data-on-Text="Min Cost" data-off-Text="Heat Map" data-on-color="info" data-off-color="success" type="checkbox" name="heat" checked>
+                <br><br>
+            <div class="row">
+                <select data-jcf='{"wrapNative": false, "wrapNativeOnMobile": false}' id="procedures">
+                    <!--  -->
+                </select>
+            </div>                 
+            </ul>
+            <button onclick="optChange()">Search</button>
+            </li>
+        </ul>
+        <div class="social">
+            <a target="_blank" href="https://github.com/ugiacoman/intense-mapbox">
+            <div class="social-icon">
+                <i class="fa fa-github"></i>
+            </div>
+            </a>
+<!--             <p>
+                From: Zagreb, Croatia<br>
+                 Site: <a href="http://mario-loncarek.from.hr/">mario-loncarek.from.hr</a>
+            </p> -->
+        </div>
+    </div>
+</div>
+<div class="content">
+     
+</div>
 
 <div id='map'></div>
 
@@ -115,7 +374,9 @@ function renderListings(features) {
         features.forEach(function(feature) {
             var prop = feature.properties;
             var item = document.createElement('a');
-            item.href = prop.wikipedia;
+            var link = "https://www.google.com/?gws_rd=ssl#q="
+            parsed = replaceAll(prop.name, " ", "+")
+            item.href = link + parsed
             item.target = '_blank';
             item.textContent = prop.name + ' (' + prop.provider_id + ')';
             item.addEventListener('mouseover', function() {
@@ -234,6 +495,77 @@ map.on('load', function() {
     renderListings([]);
 });
 </script>
+<script>
+    $("[name='heat']").bootstrapSwitch();
+    $(document).ready(function(){
+        $(".button a").click(function(){
+            $(".overlay").fadeToggle(200);
+           $(this).toggleClass('btn-open').toggleClass('btn-close');
+        });
+    $.ajax({
+        type: 'GET',
+        url: '/procedures',
+        data: { get_param: 'value' },
+        dataType: 'json',
+        success: function (data) {
+            $.each(data, function(index, element){
+                $("#procedures").append('<option val="' + element + '">'+element+'</option>' );
+            });
+            jcf.replaceAll();
+
+        }
+    });        
+    });
+    // $('.overlay').on('click', function(){
+    //     $(".overlay").fadeToggle(200);   
+    //     $(".button a").toggleClass('btn-open').toggleClass('btn-close');
+    //     open = false;
+    // });
+    $(".send").on('click', function(){
+        $(".text").addClass("active");
+        $(".send").addClass("active");
+        $(".loader").addClass("active");
+        $(".send").delay(1700).queue(function(){
+            $(this).addClass("finished").clearQueue();
+        });
+        
+        $(".done").delay(1600).queue(function(){
+            $(this).addClass("active").clearQueue();
+        });
+    })
+
+    $(document).ready(function() {
+       $('#procedures').css('color','gray');
+       $('#procedures').change(function() {
+          var current = $('#procedures').val();
+          if (current != 'null') {
+              $('#procedures').css('color','black');
+          } else {
+              $('#procedures').css('color','gray');
+          }
+       }); 
+    });
+
+    function replaceAll(str, find, replace) {
+      return str.replace(new RegExp(find, 'g'), replace);
+    }
+
+function optChange() {
+    var optionSelected = $('#procedures').find("option:selected");
+    var valueSelected  = optionSelected.val();
+    var heatmapBOOL = $('[name="heat"]').is(':checked');
+    valueSelected = replaceAll(valueSelected, " ", "&");
+    valueSelected = replaceAll(valueSelected, "/", "_");
+    if (heatmapBOOL == false) {
+        window.location.href = '/heatmap/'+valueSelected;
+    }
+    else {
+        window.location.href = '/min/'+valueSelected;
+    }
+}
+    
+</script>
+
 
 </body>
 </html>
