--- a/templates/index.html
+++ b/templates/index.html
@@ -277,7 +277,7 @@ nav ul li a:hover {
             <li><a href="#">Features</a>
             <ul>
                 <li><a href="/filter"><h3>Medical Locations</h3></a></li>
-                <input data-on-Text="Min Cost" data-off-Text="Heat Map" data-on-color="info" data-off-color="success" type="checkbox" name="my-checkbox" checked>
+                <input data-on-Text="Min Cost" data-off-Text="Heat Map" data-on-color="info" data-off-color="success" type="checkbox" name="heat" checked>
                 <br><br>
             <div class="row">
                 <select data-jcf='{"wrapNative": false, "wrapNativeOnMobile": false}' id="procedures">
@@ -285,11 +285,11 @@ nav ul li a:hover {
                 </select>
             </div>                 
             </ul>
-            <button onclick="fuckinA()">Click me</button>
+            <button onclick="optChange()">Search</button>
             </li>
         </ul>
         <div class="social">
-            <a href="http://mario-loncarek.from.hr/">
+            <a target="_blank" href="https://github.com/ugiacoman/intense-mapbox">
             <div class="social-icon">
                 <i class="fa fa-github"></i>
             </div>
@@ -305,15 +305,15 @@ nav ul li a:hover {
      
 </div>
 <script>
-$("[name='my-checkbox']").bootstrapSwitch();
+
 mapboxgl.accessToken = 'pk.eyJ1IjoidWdpYWNvbWFuIiwiYSI6ImNpbW8xdTUwejAwYXF1N2x5dmRydnpuZTIifQ.YF2LyOa-5Ookoi4_kpmCEg';
 var map = new mapboxgl.Map({
     container: 'map',
     style: 'mapbox://styles/ugiacoman/cinhop0me000damm704bfxnav',
-    center: [-74.0315, 40.6989],
-    maxZoom: 16,
-    minZoom: 9,
-    zoom: 9.68
+    center: [-100.04, 38.907],
+    maxZoom: 12,
+    minZoom: 4,
+    zoom: 3
 });
 
 var title = document.getElementById('location-title');
@@ -324,27 +324,30 @@ var locations = [{
     "title": "Welcome to Intense-Mapbox!",
     "description": "The purpose of this project is to provide estimates of the average cost of a particular of Diagnosis-related group (DRG). A DRG is a general type of common injury such as head trauma or a broken limb.",
     "camera": {
-        center: [-73.8709, 40.8255],
-        zoom: 12.21,
-        pitch: 50
+        center: [-78.64001, 37.67078],
+        bearing: 0,
+        pitch: 0,
+        zoom: 5
+
     }
 }, {
     "id": "3",
     "title": "How it works",
     "description": "By using a widely recognized DRG, we can average medical costs at different hospitals all throughout the country, giving you the oppurtunity to see which hospital or medical center is the most cost efficient specific to your individual needs.",
     "camera": {
-        center: [-73.9499, 40.6260],
-        bearing: -8.9,
-        zoom: 11.68
+        center: [-78.64001, 37.67078],
+        bearing: -6,
+        zoom: 7 
     }
 }, {
     "id": "4",
     "title": "Give it a Try!",
     "description": "Use the menu button in the top right to view all options available to you.  Select which one you want to see and the map will do the rest!",
     "camera": {
-        center: [-73.8432, 40.6923],
-        bearing: 36,
-        zoom: 11.37
+        center: [-100.04, 38.907],
+        bearing: 0,
+        pitch: 50,
+        zoom: 4
     }
 }];
 
@@ -402,6 +405,7 @@ map.on('load', function() {
 });
 </script>
 <script>
+    $("[name='heat']").bootstrapSwitch();
     $(document).ready(function(){
         $(".button a").click(function(){
             $(".overlay").fadeToggle(200);
@@ -439,21 +443,36 @@ map.on('load', function() {
         });
     })
 
-    $('select').change(function () {
-
-     });    
+    $(document).ready(function() {
+       $('#procedures').css('color','gray');
+       $('#procedures').change(function() {
+          var current = $('#procedures').val();
+          if (current != 'null') {
+              $('#procedures').css('color','black');
+          } else {
+              $('#procedures').css('color','gray');
+          }
+       }); 
+    });
 
     function replaceAll(str, find, replace) {
       return str.replace(new RegExp(find, 'g'), replace);
     }
 
-function fuckinA() {
+function optChange() {
     var optionSelected = $('#procedures').find("option:selected");
     var valueSelected  = optionSelected.val();
-    console.log(valueSelected);
+    var heatmapBOOL = $('[name="heat"]').is(':checked');
     valueSelected = replaceAll(valueSelected, " ", "&");
     valueSelected = replaceAll(valueSelected, "/", "_");
-    window.location.href = '/min/'+valueSelected;
+    if (heatmapBOOL == false) {
+        window.location.href = '/heatmap/'+valueSelected;
+    }
+    else {
+        window.location.href = '/min/'+valueSelected;
+    }
+    
+    
         
 }    
 </script>
