--- a/templates/index.html
+++ b/templates/index.html
@@ -7,13 +7,13 @@
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.17.0/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.17.0/mapbox-gl.css' rel='stylesheet' />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css"> 
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/css/bootstrap-switch.css" rel="stylesheet"> 
+    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/bootstrap-switch.css" rel="stylesheet"> 
     <link rel="stylesheet" href="/static/css/main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-    <script src="/static/js/jcf.js"></script>
-    <script src="/static/js/jcf.select.js"></script>      
-    <script src="/static/js/bootstrap-switch.js"></script>
+    <script src="../static/js/jcf.js"></script>
+    <script src="../static/js/jcf.select.js"></script>      
+    <script src="../static/js/bootstrap-switch.js"></script>
     <style>
         body { margin:0; padding:0; }
         #map { position:absolute; top:0; bottom:0; width:100%; }
